--- a/index.html
+++ b/index.html
@@ -50,31 +50,9 @@
 				</p>
 
 
-	<h1 class="display-4">Get ready for the adventure of a lifetime!</h1>
+	<h1 class="display-4">Our lives will never be the same...</h1>
 		
-					<!-- Begin MailChimp Signup Form -->
-							<div id="mc_embed_signup">
-							<form action="https://messyventures.us19.list-manage.com/subscribe/post?u=15610c156f05a20081a28c893&amp;id=e1d5636730" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-							    <div id="mc_embed_signup_scroll">
-								
-							<div class="mc-field-group">
-								<label for="mce-EMAIL">Email Address </label>
-							</div>
-								<div id="mce-responses" class="clear">
-									<div class="response" id="mce-error-response" style="display:none"></div>
-									<div class="response" id="mce-success-response" style="display:none"></div>
-								</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-							    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_15610c156f05a20081a28c893_e1d5636730" tabindex="-1" value=""></div>
-							    <div class="clear"><input class="btn btn-primary btn-lg" type="submit" value="Join the Journey" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-							    </div>
-							</form>
-							</div>
-
-					<!--End mc_embed_signup-->
-				<!-- <p class="lead">
-					 <a class="btn btn-primary btn-lg" href="#" role="button">Join the Journey</a> 
-				</p> -->
-				<br>
+					
 </div>
  
 
